--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/teatro
+spring.datasource.url=jdbc:mariadb://localhost:3306/
 spring.datasource.username=tasker
 spring.datasource.password=admin
 spring.datasource.platform=mariadb
